--- a/templates/blog/blog-home.html
+++ b/templates/blog/blog-home.html
@@ -109,7 +109,7 @@
 									class="lnr lnr-calendar-full"></span></p>
 							<p class="view col-lg-12 col-md-12 col-6"><a href="#">Views: {{post.conted_vies}}</a> <span
 									class="lnr lnr-eye"></span></p>
-							<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span
+							<p class="comments col-lg-12 col-md-12 col-6"><a href="#">{% comment_count post.id %} Comments</a> <span
 									class="lnr lnr-bubble"></span></p>
 						</div>
 					</div>
