--- a/templates/blog/blog-single.html
+++ b/templates/blog/blog-single.html
@@ -4,6 +4,7 @@
 {% block content%}
 {% load custom_tags %}
 {% load mathfilters %}
+{% load humanize %}
 
 <!-- start banner Area -->
 <section class="relative about-banner">
@@ -49,7 +50,7 @@
 							<p class="view col-lg-12 col-md-12 col-6"><a href="#">Views: {{posts.conted_vies}}</a>
 								<span class="lnr lnr-eye"></span>
 							</p>
-							<p class="comments col-lg-12 col-md-12 col-6"><a href="#">06 Comments</a> <span
+							<p class="comments col-lg-12 col-md-12 col-6"><a href="#">{{comments|length}} Comments</a> <span
 									class="lnr lnr-bubble"></span></p>
 							<ul class="social-links col-lg-12 col-md-12 col-6">
 								<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -97,7 +98,7 @@
 						</li>
 						{% endif %}
 					</ul>
-                    
+                    <!--
 					<div class="comment-form">
 						<div id="disqus_thread"></div>
 						<script>
@@ -120,9 +121,11 @@
 						<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 
 					</div>
-					<!--
+					-->
+					
 					<div class="comments-area">
-						<h4>05 Comments</h4>
+						<h4>{{comments|length}} Comments</h4>
+						{% for comment in comments %}
 						<div class="comment-list">
 							<div class="single-comment justify-content-between d-flex">
 								<div class="user justify-content-between d-flex">
@@ -130,111 +133,52 @@
 										<img src="{% static 'img/blog/c1.jpg' %}" alt="">
 									</div>
 									<div class="desc">
-										<h5><a href="#">Emilly Blunt</a></h5>
-										<p class="date">December 4, 2017 at 3:12 pm </p>
+										<h5><a href="#">{{comment.name}}</a></h5>
+										<p class="date">{{comment.created_date|naturaltime}} </p>
 										<p class="comment">
-											Never say goodbye till the end comes!
+											{{comment.message}}
 										</p>
 									</div>
 								</div>
+								<!--
 								<div class="reply-btn">
 									<a href="" class="btn-reply text-uppercase">reply</a>
 								</div>
+								-->
 							</div>
 						</div>
-						<div class="comment-list left-padding">
-							<div class="single-comment justify-content-between d-flex">
-								<div class="user justify-content-between d-flex">
-									<div class="thumb">
-										<img src="{% static 'img/blog/c2.jpg' %}" alt="">
-									</div>
-									<div class="desc">
-										<h5><a href="#">Elsie Cunningham</a></h5>
-										<p class="date">December 4, 2017 at 3:12 pm </p>
-										<p class="comment">
-											Never say goodbye till the end comes!
-										</p>
-									</div>
-								</div>
-								<div class="reply-btn">
-									<a href="" class="btn-reply text-uppercase">reply</a>
-								</div>
-							</div>
-						</div>
-						<div class="comment-list left-padding">
-							<div class="single-comment justify-content-between d-flex">
-								<div class="user justify-content-between d-flex">
-									<div class="thumb">
-										<img src="{% static 'img/blog/c3.jpg' %}" alt="">
-									</div>
-									<div class="desc">
-										<h5><a href="#">Annie Stephens</a></h5>
-										<p class="date">December 4, 2017 at 3:12 pm </p>
-										<p class="comment">
-											Never say goodbye till the end comes!
-										</p>
-									</div>
-								</div>
-								<div class="reply-btn">
-									<a href="" class="btn-reply text-uppercase">reply</a>
-								</div>
-							</div>
-						</div>
-						<div class="comment-list">
-							<div class="single-comment justify-content-between d-flex">
-								<div class="user justify-content-between d-flex">
-									<div class="thumb">
-										<img src="{% static 'img/blog/c4.jpg' %}" alt="">
-									</div>
-									<div class="desc">
-										<h5><a href="#">Maria Luna</a></h5>
-										<p class="date">December 4, 2017 at 3:12 pm </p>
-										<p class="comment">
-											Never say goodbye till the end comes!
-										</p>
-									</div>
-								</div>
-								<div class="reply-btn">
-									<a href="" class="btn-reply text-uppercase">reply</a>
-								</div>
-							</div>
-						</div>
-						<div class="comment-list">
-							<div class="single-comment justify-content-between d-flex">
-								<div class="user justify-content-between d-flex">
-									<div class="thumb">
-										<img src="{% static 'img/blog/c5.jpg' %}" alt="">
-									</div>
-									<div class="desc">
-										<h5><a href="#">Ina Hayes</a></h5>
-										<p class="date">December 4, 2017 at 3:12 pm </p>
-										<p class="comment">
-											Never say goodbye till the end comes!
-										</p>
-									</div>
-								</div>
-								<div class="reply-btn">
-									<a href="" class="btn-reply text-uppercase">reply</a>
-								</div>
-							</div>
-						</div>
+						{% empty %}
+						<p>
+							this post hasn't any comment yet
+						</p>
+						{% endfor %}
 					</div>
+
+
 					<div class="comment-form">
-						<h4>Leave a Comment</h4>
-						<form>
+						<h4>Leave a Comment</h4>	
+						
+						<form  method="POST" action="{% url 'blog:detail' pk=posts.id %}">
+						{% csrf_token %}
+						<!--					
+						<form method="POST" action="{% url 'blog:detail' pk=posts.id %}">
+							
+							{{form.as_p}}
+						-->
+					        <input type="hidden" name="post" value="{{posts.id}}">
 							<div class="form-group form-inline">
 								<div class="form-group col-lg-6 col-md-12 name">
-									<input type="text" class="form-control" id="name" placeholder="Enter Name"
+									<input type="text" class="form-control" name="name" placeholder="Enter Name"
 										onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Name'">
 								</div>
 								<div class="form-group col-lg-6 col-md-12 email">
-									<input type="email" class="form-control" id="email"
+									<input type="email" class="form-control" name="email"
 										placeholder="Enter email address" onfocus="this.placeholder = ''"
 										onblur="this.placeholder = 'Enter email address'">
 								</div>
 							</div>
 							<div class="form-group">
-								<input type="text" class="form-control" id="subject" placeholder="Subject"
+								<input type="text" class="form-control" name="subject" placeholder="Subject"
 									onfocus="this.placeholder = ''" onblur="this.placeholder = 'Subject'">
 							</div>
 							<div class="form-group">
@@ -242,10 +186,11 @@
 									onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'"
 									required=""></textarea>
 							</div>
-							<a href="#" class="primary-btn text-uppercase">Post Comment</a>
+						
+							<button type="submit" class="primary-btn text-uppercase">Post Comment</button>
 						</form>
 					</div>
-					-->
+					
 
 				</div>
 				<div class="col-lg-4 sidebar-widgets">
